<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp"
    tools:context=".LoginSignup.RetailerStartUpScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/reatailer_circle_black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            android:text="@string/retailer_heading"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="36sp"
            app:fontFamily="@font/muli_light_italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/retailer_tag_line"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            app:fontFamily="@font/muli_extralight" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="40dp"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="0dp"
                android:id="@+id/login_btn"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:background="@color/colorPrimary"
                android:onClick="callLoginScreen"
                android:transitionName="transition_login"
                android:text="login"/>
            <Button
                android:layout_width="0dp"
                android:id="@+id/signup_btn"
                android:onClick="callSignUpScreen"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:transitionName="transition_signup"
                android:layout_marginLeft="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/sign_up"/>

        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:background="#00000000"
            android:text="@string/how_we_work"/>
    </LinearLayout>

</ScrollView>